// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcInputField display properly with the given props 1`] = `
<div
  class="ec-input-field"
>
  <label
    class="ec-input-field__label"
    for="ec-input-field-3"
  >
    label test
  </label>
   
  <input
    class="ec-input-field__input"
    id="ec-input-field-3"
    type="text"
  />
   
  <!---->
</div>
`;

exports[`EcInputField renders properly with the given state "error" 1`] = `
<div
  class="ec-input-field"
>
  <label
    class="ec-input-field__label"
    for="ec-input-field-5"
  >
    label test
  </label>
   
  <input
    aria-describedby="ec-input-field-error-5"
    class="ec-input-field__input ec-input-field__input--has-error"
    id="ec-input-field-5"
    type="text"
  />
   
  <div
    class="ec-input-field__error-text"
    id="ec-input-field-error-5"
  >
    error msg
  </div>
</div>
`;

exports[`EcInputField renders properly without label 1`] = `
<div
  class="ec-input-field"
>
  <!---->
   
  <input
    class="ec-input-field__input"
    id="ec-input-field-7"
    type="text"
  />
   
  <!---->
</div>
`;

exports[`EcInputField renders with the attrs min and max 1`] = `
<div
  class="ec-input-field"
>
  <label
    class="ec-input-field__label"
    for="ec-input-field-9"
  >
    label test
  </label>
   
  <input
    class="ec-input-field__input"
    id="ec-input-field-9"
    max="10"
    min="5"
    type="number"
  />
   
  <!---->
</div>
`;
